# PointPainting

./: .gitignore  README.md  lidar_tools.h  main.cpp
inference_server/: CMakeLists.txt  color_mapping.json  inference_server.cpp  main.cpp
point_painting/src/point_painting/: CMakeLists.txt  package.xml
point_painting/src/point_painting/assets/: rviz_pointpaint.rviz
point_painting/src/point_painting/config/: color_mapping.json  config.yaml
point_painting/src/point_painting/include/govtech/MagnumAppCore/appCore/: Camera.cpp  Camera.h  MeshPrimitive.h  Scene.h  canvasPanel.cpp  canvasPanel.h  imgHolder.cpp  imgHolder.h  sceneManager.cpp  sceneManager.h
point_painting/src/point_painting/include/govtech/MagnumAppCore/imguiLib/: Context.cpp  Context.h  Context.hpp  ImGui.frag  ImGui.vert  Integration.h  Widgets.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp  resources.conf  visibility.h
point_painting/src/point_painting/include/govtech/MagnumPilotClient/: CMakeLists.txt  readme.txt
point_painting/src/point_painting/include/govtech/MagnumPilotClient/data/: robotConfig.json  spotPluginServices.json
point_painting/src/point_painting/include/govtech/MagnumPilotClient/modules/: FindCorrade.cmake  FindMagnum.cmake  FindSDL2.cmake
point_painting/src/point_painting/include/govtech/MagnumPilotClient/src/: CMakeLists.txt  MainApp.cpp  bvlosGUI.cpp  bvlosGUI.h  bvlosPanel.cpp  bvlosPanel.h  panelFontRender.hpp
point_painting/src/point_painting/include/govtech/asio-1.12.2/doc/: index.html  standalone_HTML.manifest
point_painting/src/point_painting/include/govtech/cmdPlugin/: CMakeLists.txt  cmdConfig.json  main.cpp
point_painting/src/point_painting/include/govtech/dosFramework/docs/: CommandPackets-Docs.md  WsRobotClient.md  WsServerClient.md
point_painting/src/point_painting/include/govtech/dosFramework/dosAutonomy/: autonomy.cpp  autonomy.h  followControl.cpp  followControl.h
point_painting/src/point_painting/include/govtech/dosFramework/dosCore/: commandPacket.cpp  commandPacket.h  commandPacketParse.cpp  commandPacketParse.h  imageMeta.hxx  wsClient.cpp  wsClient.h  wsRobotClient.cpp  wsRobotClient.h  wsServer.cpp  wsServer.h
point_painting/src/point_painting/include/govtech/json/: .clang-tidy  .doozer.json  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  Makefile  README.md  meson.build
point_painting/src/point_painting/include/govtech/json/doc/: Doxyfile  index.md
point_painting/src/point_painting/include/govtech/json/test/: CMakeLists.txt
point_painting/src/point_painting/include/govtech/msgpack-c/: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  Doxyfile  Files.cmake  NOTICE  QUICKSTART-C.md  QUICKSTART-CPP.md  README.md  appveyor.yml  make_file_list.sh  makedist.sh  msgpack-config.cmake.in  msgpack.pc.in  preprocess  update_version.sh
point_painting/src/point_painting/include/govtech/msgpack-c/ci/: build_cmake.sh  build_regression.sh
point_painting/src/point_painting/include/govtech/msgpack-c/example/: CMakeLists.txt
point_painting/src/point_painting/include/govtech/msgpack-c/fuzz/: CMakeLists.txt  regression_runner.cpp  unpack_pack_fuzzer.cpp
point_painting/src/point_painting/include/govtech/msgpack-c/include/: msgpack.hpp
point_painting/src/point_painting/include/govtech/msgpack-c/src/: objectc.c  unpack.c  version.c  vrefbuffer.c  zone.c
point_painting/src/point_painting/include/govtech/msgpack-c/test/: CMakeLists.txt  array_ref.cpp  boost_fusion.cpp  boost_optional.cpp  boost_string_ref.cpp  boost_string_view.cpp  boost_variant.cpp  buffer.cpp  carray.cpp  cases.cpp  convert.cpp  fixint.cpp  fixint_c.cpp  fuzz_unpack_pack_fuzzer_cpp11.cpp  inc_adaptor_define.cpp  iterator_cpp11.cpp  json.cpp  limit.cpp  msgpack_basic.cpp  msgpack_c.cpp  msgpack_container.cpp  msgpack_cpp11.cpp  msgpack_cpp17.cpp  msgpack_stream.cpp  msgpack_tuple.cpp  msgpack_vref.cpp  object.cpp  (+20 more)
point_painting/src/point_painting/include/govtech/msgpack11/: .buckconfig  .gitignore  .travis.yml  BUCK  CMakeLists.txt  LICENSE.txt  README.md  buckaroo.json  example.cpp  msgpack11.cpp  msgpack11.hpp  msgpack11.pc.in
point_painting/src/point_painting/include/govtech/spotPy/: .gitignore  clientTest.py  hello_spot.py  image_capture.py  media_log.py  monitorExample.py  requirements.txt  robot_state_client.py  spotCam.py  spotCamStream.py  spotMsgs.py  spotNavRecord.py  spotNavRun.py  spotNavUtils.py  spotSDKLayer.py  spotServer.py  spotServerConfig.json  spotServerConfigLocal.json  spotServerWrapper.py  testRealSenseClient.py  testServer.py  time_sync_client.py  unpackStateRecord.py  unpackStateRecordPlot.py  view_map.py  wasd.py  webrtcTest.py
point_painting/src/point_painting/include/govtech/stb/: README.md
point_painting/src/point_painting/include/govtech/utilities/: kalmanFilter.cpp  kalmanFilter.h
point_painting/src/point_painting/include/govtech/websocketpp/: CMakeLists.txt
point_painting/src/point_painting/include/govtech/wssUtils/: genCertInstructions.txt  wssClient.py  wssServer.py
point_painting/src/point_painting/include/point_painting/: point_painting.h
point_painting/src/point_painting/include/torch_segment/: torch_segment.h
point_painting/src/point_painting/launch/: point_painting.launch  point_painting_offline.launch  segmentation.launch
point_painting/src/point_painting/node/: point_painting_node.cpp
point_painting/src/point_painting/src/: point_painting.cpp  torch_segment.cpp
ros/point_painting/src/segmentation/: CMakeLists.txt  package.xml
ros/point_painting/src/segmentation/config/: config.yaml
ros/point_painting/src/segmentation/include/torch_segment/: torch_segment.h
ros/point_painting/src/segmentation/launch/: torch_segment.launch
ros/point_painting/src/segmentation/src/: torch_segment.cpp
standalone/point_painting/: CMakeLists.txt  color_mapping.json  main.cpp
standalone/point_painting/include/: file_utils.h  lidar_tools.h  torch.h
test_files/point_painting/: CMakeLists.txt  lidar_tools.h  main.cpp  utils.h
test_files/torch_script/: CMakeLists.txt  test.cpp
(+896 files in other folders)
